# KeryxInstrumenta

./: .dockerignore  .gitignore  ACC_output_schema.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  history.txt
.github/workflows/: ci.yml
docker-examples/observability/: README.md  docker-compose.yml
docker-examples/observability/grafana/: datasource.yml
docker-examples/observability/loki/: loki.yml
docker-examples/observability/otel/: otel-collector.yml
docker-examples/observability/prometheus/: prometheus.yml
docker-examples/observability/tempo/: tempo.yml
docker-examples/surrealdb/: docker-compose.yml
src/AdaptiveCodecContextEngine/: AdaptiveCodecContextEngine.csproj  Program.cs  README.md  appsettings.json
src/AdaptiveCodecContextEngine/Models/: ACCJsonContext.cs  AvecCalculator.cs  AvecScores.cs
src/AdaptiveCodecContextEngine/Parsers/: LspParser.cs
src/AdaptiveCodecContextEngine/Repo/: Extensions.cs  SurrealDbRepository.cs
src/AdaptiveCodecContextEngine/Services/: AccHostedService.cs  AccQueryService.cs  GitWatcher.cs  JsonRpcService.cs  LizardAnalyzer.cs  LspClient.cs  LspStreamManager.cs  MetricsCollector.cs
src/AdaptiveCodecContextEngine/acc-vscode/: package-lock.json  package.json
src/acc/: README.md
src/acc/AdaptiveCodecContextEngine/: AdaptiveCodecContextEngine.csproj  DependencyInjection.cs  LICENSE  Program.cs  appsettings.json  build.sh  usings.cs
src/acc/AdaptiveCodecContextEngineTests/: AdaptiveCodecContextEngineTests.csproj  AvecCalculatorTests.cs  UnitTest1.cs
src/acc/acc-nvim/: README.md
src/acc/acc-vscode/: README.md  build.sh  deploy.sh  history.txt  package-lock.json  package.json
src/acc/grafana/: code-metrics-dashboard.json
src/acc/schemas/: lsp-registry.json  querying.json
src/sttp/: .env.example  CHANGELOG.md  Modelfile  README.md  build-and-up.sh  build.sh  docker-compose.yml
src/sttp-mcp/: .dockerignore  Dockerfile  Program.cs  README.md  appsettings.json  build-image.sh  build.sh  sttp-mcp.csproj  sttp_mcp_readme.md
src/sttp-mcp.Tests/: UnitTest1.cs  sttp-mcp.Tests.csproj
src/sttp-mcp.Tests/Parsing/: SttpNodeParserTests.cs
src/sttp-mcp/Parsing/: SttpNodeParser.cs
src/sttp-mcp/Storage/: InMemoryNodeStore.cs
src/sttp-mcp/docs/: grammar_decisions.md  validation_summary.md
src/sttp/docs/: avec_foundations.md  avec_grammar_decisions.md  avec_grammar_spec.md  grammar_decisions.md  sttp_faker_and_non_ai_compressor_v1.md  sttp_grammar_blueprint.md  sttp_sdk_rs_architecture_plan.md  sttp_sdk_rs_recursive_composite_guide.md  sttp_typed_ir_language_spec.md  validation_summary.md
src/sttp/sttp-core/: CHANGELOG.md  README.md  sttp-core.csproj
src/sttp/sttp-core-rs/: CHANGELOG.md  Cargo.toml  README.md  build-package.sh  publish-crates.sh
src/sttp/sttp-core-rs/src/: lib.rs
src/sttp/sttp-core-rs/src/application/: mod.rs
src/sttp/sttp-core-rs/src/application/services/: calibration_service.rs  context_query_service.rs  embedding_migration_service.rs  mod.rs  monthly_rollup_service.rs  mood_catalog_service.rs  rekey_scope_service.rs  store_context_service.rs  sync_coordinator_service.rs
src/sttp/sttp-core-rs/src/application/validation/: mod.rs  tree_sitter_validator.rs
src/sttp/sttp-core-rs/src/domain/: contracts.rs  models.rs
src/sttp/sttp-core-rs/src/parsing/: ast.rs  lexer.rs  lexicon.rs  mod.rs  state_machine.rs  sttp_node_parser.rs
src/sttp/sttp-core-rs/src/storage/: in_memory_node_store.rs  mod.rs
src/sttp/sttp-core-rs/src/storage/surrealdb/: client.rs  mod.rs  models.rs  node_store.rs  raw_queries.rs  runtime.rs
src/sttp/sttp-core-rs/tests/: context_query_service_tests.rs  end_to_end_parsing_tests.rs  in_memory_sync_tests.rs  monthly_rollup_service_tests.rs  parser_differential_tests.rs  parser_tests.rs  surrealdb_node_store_tests.rs  surrealdb_runtime_tests.rs  sync_coordinator_service_tests.rs  validator_tests.rs
src/sttp/sttp-gateway/: .dockerignore  CHANGELOG.md  Dockerfile  Program.cs  README.md  appsettings.json  build-image.sh  build.sh  sttp-gateway.csproj
src/sttp/sttp-gateway-rs/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build-image.sh  build.rs
src/sttp/sttp-gateway-rs/proto/: sttp.proto
src/sttp/sttp-gateway-rs/scripts/: integration-smoke.sh  predeploy-check.sh
src/sttp/sttp-gateway-rs/src/: app_state.rs  constants.rs  gateway.rs  gateway_args.rs  http_models.rs  main.rs  orchestration.rs  providers.rs  surreal_client.rs  tenant.rs
src/sttp/sttp-gateway-rs/testdata/: sttp_gateway_refactor_momentum_node.md  sttp_safety_eval_nodes_batch1.md
src/sttp/sttp-mcp/: ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Program.cs  README.md  build.sh  (+3 more)
src/sttp/sttp-mcp-rs/: Cargo.toml  Dockerfile  README.md  build-image.sh  build.sh
src/sttp/sttp-mcp-rs/src/: main.rs
src/sttp/sttp-mcp.Tests/: UnitTest1.cs  sttp-mcp.Tests.csproj
src/sttp/sttp-sdk-rs/: Cargo.toml  README.md
src/sttp/sttp-sdk-rs/examples/: generate_faker_fixture.rs  memory_composition.rs  provider_registry_setup.rs  recursive_composite_pipeline.rs
src/sttp/sttp-sdk-rs/src/: lib.rs  prelude.rs
src/sttp/sttp-sdk-rs/src/application/: ai_router.rs  manual_compression.rs  memory_aggregate.rs  memory_composition.rs  memory_explain.rs  memory_filters.rs  memory_find.rs  memory_recall.rs  memory_schema.rs  memory_transform.rs  mod.rs  routing_config.rs
src/sttp/sttp-sdk-rs/src/domain/: ai.rs  compression.rs  memory.rs  mod.rs
src/sttp/sttp-sdk-rs/src/infrastructure/: mod.rs  registry.rs
src/sttp/sttp-sdk-rs/src/infrastructure/genai_adapter/: mod.rs  provider.rs
src/sttp/sttp-sdk-rs/src/infrastructure/sttp_native/: embedding_provider_adapter.rs  mod.rs
src/sttp/sttp-sdk-rs/src/interface/: dto.rs
src/sttp/sttp-sdk-rs/src/testing/: faker.rs
(+300 files in other folders)
